Checkpoint 3: fix rework layout problems.

--- a/kifi-backend/modules/shoebox/angular/src/libraries/library.styl
+++ b/kifi-backend/modules/shoebox/angular/src/libraries/library.styl
@@ -346,15 +346,23 @@ cover-image-adjust-right = 24px
 // For logged-out library search.
 //
 html:not(.kf-mobile)
+  .kf-library-card-header-wrapper.library-search
+  .kf-library-card-header-wrapper.library-search-in-progress
+    height: 90px
+
+  .kf-library-card-header.library-search
+  .kf-library-card-header.library-search-in-progress
+    position: fixed
+    top: 62px
+    width: 100%
+    z-index: 500
+
+    &.pageScrolled
+      box-shadow: 0px 5px 5px #ddd
+
   .library-search .library-card
   .library-card.library-search-in-progress
     max-height: 90px
-    position: fixed
-    top: 62px
-    z-index: 500
-
-    &.pageScrolled::before
-      box-shadow: 0px 5px 5px #ddd
 
     .kf-keep-lib-body
       max-height: 90px
